--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ section h2 {
     width: 220px;
     height: 3px;
     background-color: var(--purple);
-    margin: 0 auto 20px; /* Center the underline */
+    margin: 0 auto 20px;
 }
 
 .project-description p {
@@ -202,6 +202,87 @@ section h2 {
     text-decoration: none;
     margin-left: 0;
 }
+
+.learning-outcomes {
+    position: relative;
+    background-color: var(--darkest-gray);
+}
+
+.title {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.title::after {
+    content: ""; 
+    position: absolute;
+    left: 50%; 
+    bottom: -15px; 
+    width: 14%;
+    height: 3px; 
+    background-color: var(--purple); 
+    border-radius: 10px; 
+    transform: translateX(-50%); 
+}
+
+.hexagon-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+    justify-items: center; 
+    align-items: center; 
+}
+
+.hexagonLO {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    overflow: visible;
+    z-index: 2;
+}
+
+.hexagonLO img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease; 
+}
+
+.hexagonLO:hover img {
+    transform: scale(1.1); 
+}
+
+.hexagonLO .hover-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 23px;
+    text-align: center;
+    opacity: 1; 
+    transition: opacity 0.3s ease, font-size 0.3s ease, color 0.3s ease; 
+}
+
+.hexagonLO:hover .hover-text {
+    opacity: 1; 
+    font-size: 26px; 
+    color: var(--purple); 
+}
+.watermark {
+    max-width: 45%;
+    position: absolute; 
+    bottom: -10px; 
+    left: 850px; 
+    opacity: 0.5; 
+    transform: rotate(5deg); 
+    z-index: 1;
+}
 .footer{
     align-self: center;
+    width: 100%;
+    background-color:var(--dark-gray) ;
 }
