--- a/style.css
+++ b/style.css
@@ -48,19 +48,29 @@ body {
     background-color: transparent;
     color: var(--white); 
     border: 1px solid white; 
+    transition: background-color 0.3s; 
+}
+
+.about-btn:hover {
+    background-color: var(--purple); 
+
 }
 
 
 .profile img {
-    width: 100%; 
+    width: 120%; 
     max-width: 500px; 
     height: auto;
     border-radius: 5px; 
     display: flex;
     align-items: center; 
-    margin-right: 50px; 
+    margin-right: 120px; 
+    transition: transform 0.3s ease-in-out; 
+    
 }
-
+.profile img:hover {
+    transform: scale(1.1); /* Scale up the image on hover */
+}
 #about {
     padding-top: 100px; 
 }
@@ -160,11 +170,17 @@ section h2 {
 .hexagon img {
     max-width: 100%;
     height: auto;
-    transform: rotate(270deg);
+    transform: rotate(270deg); /* Keep the rotation transformation */
     position: absolute;
     left: 12%;
     top: 0%;
+    transition: transform 0.3s ease-in-out; 
 }
+
+.hexagon img:hover {
+    transform: rotate(270deg) scale(1.1); /* Scale up the image on hover */
+}
+
 
 .project-description {
     max-width: 40%;
@@ -201,6 +217,12 @@ section h2 {
     border-radius: 15px;
     text-decoration: none;
     margin-left: 0;
+    transition: background-color 0.3s; 
+}
+
+.application-btn:hover {
+    background-color: var(--purple); 
+
 }
 
 .learning-outcomes {
@@ -281,8 +303,68 @@ section h2 {
     transform: rotate(5deg); 
     z-index: 1;
 }
-.footer{
-    align-self: center;
-    width: 100%;
-    background-color:var(--dark-gray) ;
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: var(--dark-gray);
 }
+
+.logoFooter img {
+    width: 100px;
+    height: auto;
+    margin-left: 300%;
+}
+
+.quick-links {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: repeat(4, auto); 
+    gap: 5px;
+    margin-left: 19%;
+}
+
+.quick-links a {
+    text-decoration: none;
+    color: white;
+    padding: 5px 10px; 
+    border-radius: 5px; 
+    opacity: 0.5;
+}
+
+.quick-links a:hover {
+    color: var(--light-purple); 
+    opacity: 1;
+}
+
+.quick-links .heading {
+    color: var(--purple);
+    opacity: 1;
+    font-weight: 600;
+    pointer-events: none; 
+}
+
+.quick-links .heading:hover {
+    color: var(--purple); 
+    opacity: 1; 
+}
+
+
+
+.social-icons {
+    display: flex;
+    align-items: center;
+    margin-right: 12.5%;
+}
+
+.social-icons img {
+    margin: 5px;
+    width: 40px;
+    height: auto;
+}
+
+
+
+
