--- a/header.css
+++ b/header.css
@@ -73,5 +73,9 @@ nav ul li.current-page a::after {
 }
 
 .portfolio-btn:hover {
-    background-color: var(--hover-purple);
+    background: linear-gradient(to top right, var(--purple), var(--darker-purple));;
+    box-shadow: 0 0 5px #8C33D1,
+                0 0 25px #8C33D1,
+                0 0 50px #8C33D1,
+                0 0 200px #8C33D1;
 }
