--- a/style.css
+++ b/style.css
@@ -14,13 +14,17 @@ body {
     display: flex;
     flex-direction: column;
 }
+.about {
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
 .about-description {
     max-width: calc(35% - 50px); 
     padding-right: 20px; 
     margin-bottom: 20px;
     margin-top: 80px; 
 }
-
 .about-description p.smaller-font {
     font-size: 20px;
     margin-bottom: 10px; 
@@ -43,7 +47,6 @@ body {
     text-decoration: none;
 }
 
-
 .about-btn {
     background-color: transparent;
     color: var(--white); 
@@ -55,7 +58,6 @@ body {
     background-color: var(--purple); 
 
 }
-
 
 .profile img {
     width: 120%; 
@@ -69,7 +71,7 @@ body {
     
 }
 .profile img:hover {
-    transform: scale(1.1); /* Scale up the image on hover */
+    transform: scale(1.1);
 }
 #about {
     padding-top: 100px; 
@@ -93,43 +95,9 @@ section h2 {
     margin-left: auto;
     margin-right: 15rem;
 }
-.about {
-    display: flex;
-    flex-wrap: wrap;
-    overflow: hidden;
-}
-.about-content{
-    margin-top: 4rem;
-    margin-right: 15rem;
-    padding: 2rem;
-    background-color: black;
-    border-radius: 2rem;
-    height: 10rem;
-    max-width: 30rem;
-}
-.portfolio {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #262626;
-}
-.project {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    max-width: 600px; 
-    margin-bottom: 20px;
-    background-color: black;
-    padding: 2rem;
-    border-radius: 2rem;
-}
 
-.project img {
-    max-width: 20rem;
-    height: auto;
-    margin-bottom: 10px;
-}
 .hexagon-container {
+    max-height: 400px;
     display: flex;
     align-items: center;
 }
@@ -166,11 +134,10 @@ section h2 {
     border-bottom: 115.5px solid var(--purple);
 }
 
-
 .hexagon img {
     max-width: 100%;
     height: auto;
-    transform: rotate(270deg); /* Keep the rotation transformation */
+    transform: rotate(270deg); 
     position: absolute;
     left: 12%;
     top: 0%;
@@ -178,14 +145,13 @@ section h2 {
 }
 
 .hexagon img:hover {
-    transform: rotate(270deg) scale(1.1); /* Scale up the image on hover */
+    transform: rotate(270deg) scale(1.1); 
 }
-
 
 .project-description {
     max-width: 40%;
     text-align: left;
-    margin-left: 50px; /* Adjust the margin as needed */
+    margin-left: 50px; 
 }
 
 
@@ -350,8 +316,6 @@ section h2 {
     color: var(--purple); 
     opacity: 1; 
 }
-
-
 
 .social-icons {
     display: flex;
