--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@ body {
     display: flex;
     align-items: center; 
     margin-right: 120px; 
-    transition: transform 0.3s ease-in-out; 
+    /* transition: transform 0.3s ease-in-out;  */
     
 }
-.profile img:hover {
+/* .profile img:hover {
     transform: scale(1.1);
-}
+} */
 #about {
     padding-top: 100px; 
 }
@@ -141,12 +141,12 @@ section h2 {
     position: absolute;
     left: 12%;
     top: 0%;
-    transition: transform 0.3s ease-in-out; 
+    /* transition: transform 0.3s ease-in-out;  */
 }
 
-.hexagon img:hover {
+/* .hexagon img:hover {
     transform: rotate(270deg) scale(1.1); 
-}
+} */
 
 .project-description {
     max-width: 40%;
