--- a/style.css
+++ b/style.css
@@ -14,26 +14,6 @@ body {
     display: flex;
     flex-direction: column;
 }
-.about {
-    display: flex;
-    flex-wrap: wrap;
-    overflow: hidden;
-}
-.about-description {
-    max-width: calc(35% - 50px); 
-    padding-right: 20px; 
-    margin-bottom: 20px;
-    margin-top: 80px; 
-}
-.about-description p.smaller-font {
-    font-size: 20px;
-    margin-bottom: 10px; 
-}
-
-.about-description h1 {
-    font-size: 40px;
-    margin-bottom: 20px;
-}
 
 .buttons {
     margin-top: 20px;
@@ -47,18 +27,6 @@ body {
     text-decoration: none;
 }
 
-.about-btn {
-    background-color: transparent;
-    color: var(--white); 
-    border: 1px solid white; 
-    transition: background-color 0.3s; 
-}
-
-.about-btn:hover {
-    background-color: var(--purple); 
-
-}
-
 .profile img {
     width: 120%; 
     max-width: 500px; 
@@ -66,17 +34,34 @@ body {
     border-radius: 5px; 
     display: flex;
     align-items: center; 
-    margin-right: 120px; 
+    margin-right: 2.5vw; 
     /* transition: transform 0.3s ease-in-out;  */
     
 }
-/* .profile img:hover {
-    transform: scale(1.1);
-} */
-#about {
-    padding-top: 100px; 
+.title-section {
+    margin-top: 3rem;
+    text-align: center;
+    padding: 50px 20px;
+    position: relative;
 }
 
+.title-section h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+}
+
+.title-section .underline {
+    width: 20rem;
+    height: 3px;
+    background-color: var(--purple);
+    margin: 0 auto 20px;
+}
+
+.title-section p {
+    font-size: 20px;
+    max-width: 600px;
+    margin: 0 auto;
+}
 
 section {
     padding: 20px;
@@ -87,108 +72,12 @@ section h2 {
 }
 
 .left{
-    align-self: flex-start;
     margin-right: auto;
     margin-left: 15rem;
 }
 .right{
     margin-left: auto;
     margin-right: 15rem;
-}
-
-.hexagon-container {
-    max-height: 400px;
-    display: flex;
-    align-items: center;
-}
-
-.projects {
-    background-color: var(--dark-gray);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 400px;
-}
-
-.hexagon {
-    width: 400px;
-    height: 40vw;
-    background: linear-gradient(to bottom, var(--purple), var(--darker-purple));
-    position: relative;
-    transform: rotate(90deg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.hexagon:before {
-    content: "";
-    position: absolute;
-    width: 0;
-    border-left: 200px solid transparent;
-    border-right: 200px solid transparent;
-}
-
-.hexagon:before {
-    bottom: 100%;
-    border-bottom: 115.5px solid var(--purple);
-}
-
-.hexagon img {
-    max-width: 100%;
-    height: auto;
-    transform: rotate(270deg); 
-    position: absolute;
-    left: 12%;
-    top: 0%;
-    /* transition: transform 0.3s ease-in-out;  */
-}
-
-/* .hexagon img:hover {
-    transform: rotate(270deg) scale(1.1); 
-} */
-
-.project-description {
-    max-width: 33%;
-    text-align: left;
-    margin-left: 50px; 
-}
-
-
-.project-description h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.project-description .underline {
-    width: 220px;
-    height: 3px;
-    background-color: var(--purple);
-    margin: 0 auto 20px;
-}
-
-.project-description p {
-    color: #fff;
-    font-size: 20px;
-    margin-bottom: 50px;
-    text-align: left;
-}
-
-.application-btn {
-    background-color: transparent;
-    border: 1px solid white;
-    color: var(--white);
-    padding: 17px 35px; 
-    border-radius: 15px;
-    text-decoration: none;
-    margin-left: 0;
-    transition: background-color 0.3s; 
-}
-
-.application-btn:hover {
-    background-color: var(--purple); 
-
 }
 
 .learning-outcomes {
@@ -215,51 +104,7 @@ section h2 {
     transform: translateX(-50%); 
 }
 
-.hexagon-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    padding: 20px;
-    justify-items: center; 
-    align-items: center; 
-}
 
-.hexagonLO {
-    position: relative;
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    overflow: visible;
-    z-index: 2;
-}
-
-.hexagonLO img {
-    width: 100%;
-    height: auto;
-    transition: transform 0.3s ease; 
-}
-
-.hexagonLO:hover img {
-    transform: scale(1.1); 
-}
-
-.hexagonLO .hover-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-size: 23px;
-    text-align: center;
-    opacity: 1; 
-    transition: opacity 0.3s ease, font-size 0.3s ease, color 0.3s ease; 
-}
-
-.hexagonLO:hover .hover-text {
-    opacity: 1; 
-    font-size: 26px; 
-    color: var(--purple); 
-}
 .watermark {
     max-width: 45%;
     position: absolute; 
@@ -269,66 +114,6 @@ section h2 {
     transform: rotate(5deg); 
     z-index: 1;
 }
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: var(--dark-gray);
-}
-
-.logoFooter img {
-    width: 100px;
-    height: auto;
-    margin-left: 300%;
-}
-
-.quick-links {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    grid-template-rows: repeat(4, auto); 
-    gap: 5px;
-    margin-left: 19%;
-}
-
-.quick-links a {
-    text-decoration: none;
-    color: white;
-    padding: 5px 10px; 
-    border-radius: 5px; 
-    opacity: 0.5;
-}
-
-.quick-links a:hover {
-    color: var(--light-purple); 
-    opacity: 1;
-}
-
-.quick-links .heading {
-    color: var(--purple);
-    opacity: 1;
-    font-weight: 600;
-    pointer-events: none; 
-}
-
-.quick-links .heading:hover {
-    color: var(--purple); 
-    opacity: 1; 
-}
-
-.social-icons {
-    display: flex;
-    align-items: center;
-    margin-right: 12.5%;
-}
-
-.social-icons img {
-    margin: 5px;
-    width: 40px;
-    height: auto;
-}
-
 
 
 
