--- a/components/hexagrid/hexagrid.css
+++ b/components/hexagrid/hexagrid.css
@@ -1,8 +1,14 @@
+.hexagrid{
+    display: grid;
+    justify-items: center; 
+    align-items: center; 
+}
 .hexagon-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    padding: 20px;
+    gap: 100px;
+    max-width: 100%;
+    padding: 60px;
     justify-items: center; 
     align-items: center; 
 }
