--- a/style.css
+++ b/style.css
@@ -14,6 +14,33 @@ body {
     display: flex;
     flex-direction: column;
 }
+/* Define keyframes for fade-in and fade-out */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+/* Apply animations to the body */
+/* body.fade-in {
+    animation: fadeIn 0.3s forwards;
+}
+
+body.fade-out {
+    animation: fadeOut 0.3s forwards;
+} */
 
 .buttons {
     margin-top: 20px;
@@ -41,13 +68,13 @@ body {
 .title-section {
     margin-top: 3rem;
     text-align: center;
-    padding: 50px 20px;
+    padding: 50px 20px 0px 20px;
     position: relative;
 }
 
 .title-section h1 {
     font-size: 36px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .title-section .underline {
