--- a/header.css
+++ b/header.css
@@ -11,7 +11,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 7vw;
 }
 
 .logo-container {
