--- a/components/subheader/subheader.css
+++ b/components/subheader/subheader.css
@@ -2,7 +2,6 @@
     position: sticky;
     top: 70px; /* Adjust based on the height of your main header */
     background-color: var(--darkest-gray); /* Example background color */
-    padding: 10px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 100;
 }
@@ -20,7 +19,7 @@
 }
 
 .section-navigation nav ul li {
-    margin-right: 20px; /* Adjust spacing between nav items */
+    margin-right: 20px;
 }
 
 .section-navigation nav ul li a {
