--- a/learningOutcomes/research/research.css
+++ b/learningOutcomes/research/research.css
@@ -53,6 +53,7 @@ body {
     width: 60%;
     background-color: var(--section-gray);
     margin-bottom: 20px;
+    padding-bottom: 2rem;
     border-radius: 2rem;
     position: relative;
 }
@@ -126,6 +127,13 @@ body {
 }
 .video-container{
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 40px;
+    padding: 0px 20px 10px 20px;
+    background-color: var(--dark-gray);
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 max-width: 20%;
+}
+.video-container h3{
+    margin: 1rem;
 }
