Header and Footer update

--- a/components/hexagrid/hexagrid.css
+++ b/components/hexagrid/hexagrid.css
@@ -47,5 +47,5 @@
 .hexagonLO:hover .hover-text {
     opacity: 1; 
     font-size: 26px; 
-    color: var(--purple); 
+    color: var(--contrast-purple); 
 }
