--- a/header.css
+++ b/header.css
@@ -54,19 +54,19 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     position: relative;
+    padding: 2rem 0 2rem 0;
 }
 
 nav ul li.current-page a::after {
     content: ""; /* Create the pseudo-element */
     position: absolute;
-    bottom: -5px; 
+    bottom: 20px; 
     left: 50%; /* Position the pseudo-element at the center */
     transform: translateX(-50%); /* Center the pseudo-element horizontally */
     width: 110%;
     height: 2px; 
     background-color: var(--purple); 
 }
-
 
 .portfolio-btn {
     font-weight: 550;
@@ -85,4 +85,40 @@ nav ul li.current-page a::after {
                 0 0 25px #8C33D1,
                 0 0 50px #8C33D1,
                 0 0 200px #8C33D1;
+}
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 220%;
+    left: 0;
+    background-color: var(--dark-gray);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    min-width: 160px;
+    opacity: 0; /* Start with opacity 0 */
+    transition: opacity 0.3s ease; /* Smooth opacity transition */
+    pointer-events: none; /* Disable pointer events when hidden */
+}
+
+.dropdown-content a {
+    color: #fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+}
+
+.dropdown-content a:hover {
+    background-color: var(--darkest-gray);
+}
+
+/* Show dropdown on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+    opacity: 1; /* Fade in the dropdown */
+    pointer-events: auto; /* Enable pointer events when shown */
 }
