--- a/learningOutcomes/further.css
+++ b/learningOutcomes/further.css
@@ -1,17 +1,17 @@
 .sectionParent {
-    padding: 20px; /* Added padding around the section parent */
+    padding: 20px;
 }
 
 .section {
-    margin-bottom: 40px; /* Added margin below the section */
+    margin-bottom: 40px;
     flex-direction: column;
 }
 
 .section .further-detail {
     text-align: left;
-    padding: 20px; /* Added padding inside the further-detail */
-    background-color: var(--background-color); /* Adjust this to your preferred background color */
-    border-radius: 8px; /* Added border-radius for better visual appearance */
+    padding: 20px; 
+    background-color: var(--background-color);
+    border-radius: 8px;
 }
 
 .section .further-detail h2 {
@@ -33,7 +33,7 @@
     margin-bottom: 15px;
     margin-left: 5rem;
     margin-right: 3rem;
-    line-height: 1.6; /* Added line-height for better readability */
+    line-height: 1.6; 
 }
 
 .further-btn {
@@ -164,8 +164,6 @@ body {
     margin-left: 5rem;
     margin-right: 3rem;
 }
-
-/* Specific styles for the reverse layout section */
 .reverse-section {
     flex-direction: row;
 }
